style.css
.tab10 {
    margin-left: 10px;
}
.reset_btn {
    margin-left: 20px;
}
#profile_alert {
    display:  inline-block;
}
.back {
    text-align: center;
}

/*-----------------profile--------------------------*/
/*********************************************/

.form_block {
    background: #eee;  
    padding: 5px 10px;
    border-radius:  5px;
    margin-bottom: 20px;
}

/*-----------------media queries---------------*/
/*********************************************/

/*.embed-responsive,
.embed-responsive-4by3,
.embed-responsive-item {
    width: 533px;
    height: 400px;
    margin: auto;
    }*/

@media (max-width:  767px) {
    .page-header > .nav > li > a {
    padding: 5px 5px;
    }
    .page-header {
        padding-bottom: 9px;
        margin: 20px 0 10px;
        border-bottom: 1px solid #eee;
    }
    .page-header > h3 {
        font-size: 1.5em;
    }
}

@media (max-width:  480px) {
    .page-header > h3 {
        clear: both;
    }
}

